--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 :root {
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background: #0e1823;
   font-family: "Inter", sans-serif;
+  margin: 0 auto;
+  text-align: center;
 }
 
 h1,
