--- a/src/components/AboutUs/AboutUs.module.css
+++ b/src/components/AboutUs/AboutUs.module.css
@@ -60,3 +60,45 @@
   border-radius: 24px;
   display: block;
 }
+
+@media only screen and (max-width: 1280px) {
+  .over {
+    max-width: 1178px;
+  }
+
+  .text_blocks {
+    max-width: 354px;
+  }
+
+  .imgTop {
+    max-width: 1180px;
+    top: 360px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .over {
+    max-width: 702px;
+    padding: 50px 32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+  }
+
+  .title {
+    margin-bottom: 50px;
+  }
+
+  .text_blocks {
+    max-width: 389px;
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    gap: 20px;
+  }
+
+  .imgTop {
+    max-width: 704px;
+    top: 481px;
+  }
+}
