--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -2,3 +2,22 @@
   max-width: 1440px;
   margin: 0 auto;
 }
+
+@media only screen and (max-width: 1280px) {
+  .container {
+    max-width: 1280px;
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media only screen and (max-width: 393px) {
+  .container {
+    max-width: 393px;
+  }
+}
