--- a/src/components/AboutUs/AboutUs.module.css
+++ b/src/components/AboutUs/AboutUs.module.css
@@ -1,15 +1,16 @@
 .aboutUs {
   position: relative;
-  width: 100%;
+  padding: 75px 50px;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .over {
-  padding: 50px 50px;
+  padding: 50px;
   background-color: #fbfbfb;
   border-radius: 24px;
-  width: 1339px;
+  max-width: 1339px;
   height: 675px;
-  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   position: relative;
@@ -23,11 +24,11 @@
   letter-spacing: -0.02em;
   color: #1b414b;
   text-align: left;
-  width: 537px;
+  max-width: 537px;
 }
 
 .text_blocks {
-  width: 404px;
+  max-width: 404px;
 }
 
 .text {
@@ -51,12 +52,62 @@
   top: 337px;
   left: 50%;
   transform: translateX(-50%);
-  width: 1340px;
+  width: calc(100% - 100px);
+  max-width: 1340px;
   height: 470px;
+  border-radius: 24px;
+  overflow: hidden;
   z-index: 2;
 }
 
 .img {
+  width: 100%;
+  height: auto;
   border-radius: 24px;
   display: block;
+  object-fit: cover;
+}
+
+@media only screen and (min-width: 769px) and (max-width: 1280px) {
+  .over {
+    max-width: 1180px;
+  }
+
+  .text_blocks {
+    max-width: 354px;
+  }
+
+  .imgTop {
+    width: calc(100% - 100px);
+    max-width: 1180px;
+    top: 360px;
+  }
+}
+
+@media only screen and (min-width: 376px) and (max-width: 768px) {
+  .over {
+    max-width: 704px;
+    padding: 50px 32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+  }
+
+  .title {
+    margin-bottom: 50px;
+  }
+
+  .text_blocks {
+    max-width: 389px;
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    gap: 20px;
+  }
+
+  .imgTop {
+    width: calc(100% - 64px);
+    max-width: 704px;
+    top: 481px;
+  }
 }
