--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -102,3 +102,9 @@
 .copyright:focus {
   color: #fbfbfb;
 }
+
+@media only screen and (min-width: 769px) and (max-width: 1280px) {
+  .footer {
+    max-width: 1230px;
+  }
+}
