--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,8 @@
 .header {
   border: 1px solid #fbfbfb;
   border-radius: 8px;
-  width: 1240px;
+  max-width: 1240px;
+  width: 100%;
   height: 48px;
   background-color: #fbfbfb;
   margin: 0 auto;
@@ -68,4 +69,18 @@
 .iconSoc:hover,
 .iconSoc:focus {
   fill: rgba(27, 65, 75, 0.5);
+}
+
+@media only screen and (min-width: 769px) and (max-width: 1280px) {
+  .header {
+    max-width: 1180px;
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 376px) and (max-width: 768px) {
+  .header {
+    max-width: 704px;
+    width: 100%;
+  }
 }
