--- a/src/components/AboutUs/AboutUs.module.css
+++ b/src/components/AboutUs/AboutUs.module.css
@@ -1,7 +1,7 @@
 .aboutUs {
   position: relative;
   padding: 75px 50px;
-  max-width: 1440px;
+  width: 1440px;
   margin: 0 auto;
 }
 
@@ -9,7 +9,7 @@
   padding: 50px;
   background-color: #fbfbfb;
   border-radius: 24px;
-  max-width: 1339px;
+  width: 1340px;
   height: 675px;
   display: flex;
   justify-content: space-between;
@@ -24,11 +24,11 @@
   letter-spacing: -0.02em;
   color: #1b414b;
   text-align: left;
-  max-width: 537px;
+  width: 537px;
 }
 
 .text_blocks {
-  max-width: 404px;
+  width: 404px;
 }
 
 .text {
@@ -52,8 +52,7 @@
   top: 337px;
   left: 50%;
   transform: translateX(-50%);
-  width: calc(100% - 100px);
-  max-width: 1340px;
+  width: 1342px;
   height: 470px;
   border-radius: 24px;
   overflow: hidden;
@@ -66,48 +65,4 @@
   border-radius: 24px;
   display: block;
   object-fit: cover;
-}
-
-@media only screen and (min-width: 769px) and (max-width: 1280px) {
-  .over {
-    max-width: 1180px;
-  }
-
-  .text_blocks {
-    max-width: 354px;
-  }
-
-  .imgTop {
-    width: calc(100% - 100px);
-    max-width: 1180px;
-    top: 360px;
-  }
-}
-
-@media only screen and (min-width: 376px) and (max-width: 768px) {
-  .over {
-    max-width: 704px;
-    padding: 50px 32px;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-  }
-
-  .title {
-    margin-bottom: 50px;
-  }
-
-  .text_blocks {
-    max-width: 389px;
-    display: flex;
-    flex-direction: column;
-    text-align: start;
-    gap: 20px;
-  }
-
-  .imgTop {
-    width: calc(100% - 64px);
-    max-width: 704px;
-    top: 481px;
-  }
 }
